advanced on montage squeezie

--- a/most_replaced.ipynb
+++ b/most_replaced.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\henri\\AppData\\Local\\Temp\\ipykernel_15204\\3001212684.py:3: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from urllib.parse import urlparse, parse_qs\n",
@@ -14,21 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sum(df,row,n):\n",
-    "    return df['intensityScoreNormalized'][row.name:row.name+n].sum() \n",
-    "    # if row.name != len(df['intensityScoreNormalized'])-n : \n",
-    "    #     return df['intensityScoreNormalized'][row.name:row.name+n].sum() \n",
-    "    # else :\n",
-    "    #     return 0\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +55,7 @@
     "    if response.status_code == 200:\n",
     "        # The request was successful\n",
     "        data = response.json()\n",
+    "        print(data)\n",
     "        markers = data[\"items\"][0][\"mostReplayed\"][\"markers\"]\n",
     "        df = pd.DataFrame(markers)\n",
     "        df = df.iloc[1:-1]\n",
@@ -63,7 +65,7 @@
     "        df['sum'] = df.apply(lambda row: df['intensityScoreNormalized'][row.name:row.name+rows_3min+1].sum(), axis=1)\n",
     "        max_score_index = df['sum'].idxmax()\n",
     "        best_start = df.loc[max_score_index, 'startMillis']\n",
-    "        return best_start\n",
+    "        return best_start, round((pas*rows_3min)/1000)\n",
     "    else:\n",
     "        # The request failed\n",
     "        print(f\"Error: {response.status_code} - {response.text}\")\n"
@@ -71,129 +73,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>startMillis</th>\n",
-       "      <th>intensityScoreNormalized</th>\n",
-       "      <th>sum</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>27200</td>\n",
-       "      <td>0.320402</td>\n",
-       "      <td>2.670595</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>54400</td>\n",
-       "      <td>0.216156</td>\n",
-       "      <td>2.637212</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>81600</td>\n",
-       "      <td>0.124508</td>\n",
-       "      <td>3.008653</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>108800</td>\n",
-       "      <td>0.293796</td>\n",
-       "      <td>2.890877</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>136000</td>\n",
-       "      <td>0.373424</td>\n",
-       "      <td>2.842811</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>163200</td>\n",
-       "      <td>0.855351</td>\n",
-       "      <td>2.191008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>190400</td>\n",
-       "      <td>0.319146</td>\n",
-       "      <td>2.107251</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>217600</td>\n",
-       "      <td>0.272970</td>\n",
-       "      <td>2.133775</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>244800</td>\n",
-       "      <td>0.215244</td>\n",
-       "      <td>2.101017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>272000</td>\n",
-       "      <td>0.182774</td>\n",
-       "      <td>2.158987</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    startMillis  intensityScoreNormalized       sum\n",
-       "1         27200                  0.320402  2.670595\n",
-       "2         54400                  0.216156  2.637212\n",
-       "3         81600                  0.124508  3.008653\n",
-       "4        108800                  0.293796  2.890877\n",
-       "5        136000                  0.373424  2.842811\n",
-       "6        163200                  0.855351  2.191008\n",
-       "7        190400                  0.319146  2.107251\n",
-       "8        217600                  0.272970  2.133775\n",
-       "9        244800                  0.215244  2.101017\n",
-       "10       272000                  0.182774  2.158987"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "516800\n"
+      "{'error': {'code': 403, 'message': 'YouTube has detected unusual traffic from this YouTube operational API instance. Please try your request again later or see alternatives at https://github.com/Benjamin-Loison/YouTube-operational-API/issues/11'}}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'items'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_most_viewed\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhttps://www.youtube.com/watch?v=5wQvdPtyuKs\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[8], line 24\u001b[0m, in \u001b[0;36mget_most_viewed\u001b[1;34m(yt_link)\u001b[0m\n\u001b[0;32m     22\u001b[0m data \u001b[38;5;241m=\u001b[39m response\u001b[38;5;241m.\u001b[39mjson()\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(data)\n\u001b[1;32m---> 24\u001b[0m markers \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mitems\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmostReplayed\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmarkers\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     25\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(markers)\n\u001b[0;32m     26\u001b[0m df \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m1\u001b[39m:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'items'"
      ]
     }
    ],
    "source": [
     "\n",
-    "get_most_viewed(\"https://www.youtube.com/watch?v=dWbPdqns5Xk\")"
+    "get_most_viewed(\"https://www.youtube.com/watch?v=5wQvdPtyuKs\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
